# satisfactory

./: Cargo.toml  LICENSE  cargofmt.toml  clippy.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
satisfactory/: Cargo.toml
satisfactory/src/: main.rs
